--- a/src/pages/chart.astro
+++ b/src/pages/chart.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import App from "../components/App";
+import Chart from "../components/Chart";
 ---
 
 <Layout title="Welcome to Astro.">
-  <App client:load />
+  <Chart client:load />
 </Layout>
