--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { generateHydrationScript } from "solid-js/web";
+
 interface Props {
   title: string;
 }
@@ -17,6 +19,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <div set:html={generateHydrationScript()} />
     <slot />
   </body>
 </html>
